src/objects/Lcm_Requirement__c.object
<CustomObject>
    <description>Anforderung einer Eigenschaft, die das IT-System erfüllen soll</description>
    <fields>
        <fullName>Lcm_Description__c</fullName>
        <description>kurze Beschreibung des Requirements in Stichworten. Für Langbeschreibungen Notizen oder Anhänge verwenden</description>
        <inlineHelpText>kurze Beschreibung des Requirements in Stichworten. Für Langbeschreibungen Notizen oder Anhänge verwenden</inlineHelpText>
        <label>Beschreibung</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lcm_ETA__c</fullName>
        <description>Zu welchem Datum wird dieses Funktionspaket/Req voraussichtlich auf Prod zur Verfügung stehen?</description>
        <inlineHelpText>Zu welchem Datum wird dieses Funktionspaket/Req voraussichtlich auf Prod zur Verfügung stehen?</inlineHelpText>
        <label>ETA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lcm_RequirementName__c</fullName>
        <description>Bezeichnung des Requirements</description>
        <inlineHelpText>Bezeichnung des Requirements</inlineHelpText>
        <label>Requirement-Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lcm_Status__c</fullName>
        <description>in welcher Phase befindet sich dies Anfoderung</description>
        <inlineHelpText>in welcher Phase befindet sich dies Anfoderung</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>to clarify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>to specify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>to be developed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ready for test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>to be rollout</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lcm_TestSphere__c</fullName>
        <description>Zuordnung zur jeweiligen Test-Sphere. Hilfefeld für die Freigabeeinstellung</description>
        <inlineHelpText>Zuordnung zur jeweiligen Test-Sphere. Hilfefeld für die Freigabeeinstellung</inlineHelpText>
        <label>Lcm_TestSphere</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lcm_Unit__c</fullName>
        <description>eine oder mehrere Units, die dem fachlich Requirement zugeordnet werden.</description>
        <inlineHelpText>eine oder mehrere Units, die dem fachlich Requirement zugeordnet werden.</inlineHelpText>
        <label>Unit</label>
        <picklist>
            <picklistValues>
                <fullName>AdTech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C&amp;B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DWH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OBI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFAdmins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yield</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Lcm_VersionName__c</fullName>
        <formula>Lcm_Version__r.Lcm_VersionName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Versions-Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lcm_Version__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Version, in der Requirement umgesetzt wird/ist</description>
        <inlineHelpText>Version, in der Requirement umgesetzt wird/ist</inlineHelpText>
        <label>Versions-Nr</label>
        <referenceTo>Lcm_Version__c</referenceTo>
        <relationshipLabel>Requirements</relationshipLabel>
        <relationshipName>Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lcm_WbsLevel1__c</fullName>
        <inlineHelpText>Titel des groben Arbeitspaketes Ebene 1</inlineHelpText>
        <label>WBS Ebene 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lcm_WbsLevel2__c</fullName>
        <description>Titel des groben Arbeitspaketes Ebene 2</description>
        <inlineHelpText>Titel des groben Arbeitspaketes Ebene 2</inlineHelpText>
        <label>WBS Ebene 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lcm_WbsNo__c</fullName>
        <inlineHelpText>Nummer des groben Arbeitspaketes</inlineHelpText>
        <label>WBS No.</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Modul__c</fullName>
        <description>Names des Moduls, an welches das RQ via Version hängt</description>
        <formula>Lcm_Version__r.Lcm_Module__r.Lcm_ModuleName__c</formula>
        <inlineHelpText>Names des Moduls, an welches das RQ via Version hängt</inlineHelpText>
        <label>Modul</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Priority__c</fullName>
        <description>Priorität des Requirements</description>
        <inlineHelpText>Priorität des Requirements</inlineHelpText>
        <label>Priorität</label>
        <picklist>
            <picklistValues>
                <fullName>must have - golive relevant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>should have</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>nice to have</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>out of scope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>n/a</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Requirement</label>
    <listViews>
        <fullName>ADcalibur</fullName>
        <columns>Lcm_Version__c</columns>
        <columns>Lcm_VersionName__c</columns>
        <columns>Lcm_WbsNo__c</columns>
        <columns>Lcm_WbsLevel1__c</columns>
        <columns>Lcm_WbsLevel2__c</columns>
        <columns>NAME</columns>
        <columns>Lcm_RequirementName__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Lcm_Description__c</columns>
        <columns>Lcm_Unit__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lcm_VersionName__c</field>
            <operation>startsWith</operation>
            <value>NBT</value>
        </filters>
        <label>ADcalibur</label>
        <language>de</language>
        <sharedTo>
            <group>Lcm_TestSphereSomDig</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Adcalibur_CRM_Solutions</fullName>
        <columns>Lcm_Unit__c</columns>
        <columns>NAME</columns>
        <columns>Lcm_RequirementName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lcm_Unit__c</field>
            <operation>includes</operation>
            <value>CRM</value>
        </filters>
        <label>Adcalibur CRM Solutions</label>
        <language>de</language>
        <sharedTo>
            <group>P7S1_SphereSomDe</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Adcalibur_nice</fullName>
        <columns>Lcm_VersionName__c</columns>
        <columns>Lcm_Version__c</columns>
        <columns>NAME</columns>
        <columns>Lcm_RequirementName__c</columns>
        <columns>Lcm_Description__c</columns>
        <columns>P7S1_Priority__c</columns>
        <columns>Lcm_Status__c</columns>
        <columns>Lcm_WbsLevel1__c</columns>
        <columns>Lcm_WbsLevel2__c</columns>
        <columns>Lcm_WbsNo__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>P7S1_Priority__c</field>
            <operation>equals</operation>
            <value>nice to have</value>
        </filters>
        <filters>
            <field>Lcm_TestSphere__c</field>
            <operation>equals</operation>
            <value>Somdig</value>
        </filters>
        <label>Adcalibur nice to have</label>
        <language>de</language>
        <sharedTo>
            <group>Lcm_TestSphereSomDig</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Adcalibur_oos</fullName>
        <columns>Lcm_VersionName__c</columns>
        <columns>Lcm_Version__c</columns>
        <columns>NAME</columns>
        <columns>Lcm_RequirementName__c</columns>
        <columns>Lcm_Description__c</columns>
        <columns>P7S1_Priority__c</columns>
        <columns>Lcm_Status__c</columns>
        <columns>Lcm_WbsLevel1__c</columns>
        <columns>Lcm_WbsLevel2__c</columns>
        <columns>Lcm_WbsNo__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>P7S1_Priority__c</field>
            <operation>equals</operation>
            <value>out of scope</value>
        </filters>
        <filters>
            <field>Lcm_TestSphere__c</field>
            <operation>equals</operation>
            <value>Somdig</value>
        </filters>
        <label>Adcalibur out of scope</label>
        <language>de</language>
        <sharedTo>
            <group>Lcm_TestSphereSomDig</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>Lcm_Version__c</columns>
        <columns>Lcm_VersionName__c</columns>
        <columns>NAME</columns>
        <columns>Lcm_RequirementName__c</columns>
        <columns>P7S1_Priority__c</columns>
        <columns>Lcm_Unit__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Lcm_TestSphere__c</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Alle_SomDig</fullName>
        <columns>Lcm_Version__c</columns>
        <columns>Lcm_VersionName__c</columns>
        <columns>NAME</columns>
        <columns>Lcm_RequirementName__c</columns>
        <columns>P7S1_Priority__c</columns>
        <columns>Lcm_Unit__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Lcm_TestSphere__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lcm_TestSphere__c</field>
            <operation>equals</operation>
            <value>SomDig</value>
        </filters>
        <label>Alle SomDig</label>
        <language>de</language>
        <sharedTo>
            <group>Lcm_TestSphereSomDig</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LCM_MeineRequirements</fullName>
        <columns>Lcm_Version__c</columns>
        <columns>Lcm_VersionName__c</columns>
        <columns>NAME</columns>
        <columns>Lcm_RequirementName__c</columns>
        <columns>Lcm_Unit__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <label>Meine Requirements</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>P7S1_Architecture</fullName>
        <columns>Lcm_Version__c</columns>
        <columns>Lcm_VersionName__c</columns>
        <columns>NAME</columns>
        <columns>Lcm_RequirementName__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>P7S1_Priority__c</columns>
        <columns>Lcm_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>P7S1_Modul__c</field>
            <operation>equals</operation>
            <value>P7S1 Architecture</value>
        </filters>
        <label>P7S1 Architecture</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Sales_Excellence</fullName>
        <columns>Lcm_Version__c</columns>
        <columns>Lcm_VersionName__c</columns>
        <columns>Lcm_WbsNo__c</columns>
        <columns>Lcm_WbsLevel1__c</columns>
        <columns>Lcm_WbsLevel2__c</columns>
        <columns>NAME</columns>
        <columns>Lcm_RequirementName__c</columns>
        <columns>Lcm_Description__c</columns>
        <columns>Lcm_Unit__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>P7S1_Modul__c</field>
            <operation>equals</operation>
            <value>Se</value>
        </filters>
        <label>Sales Excellence</label>
        <language>de</language>
        <sharedTo>
            <group>Lcm_TestSphereSomDig</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SomDigDe_C_B</fullName>
        <columns>Lcm_Unit__c</columns>
        <columns>NAME</columns>
        <columns>Lcm_RequirementName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lcm_Unit__c</field>
            <operation>includes</operation>
            <value>C&amp;B</value>
        </filters>
        <label>C&amp;B</label>
        <language>de</language>
        <sharedTo>
            <group>Lcm_TestSphereSomDig</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SomDigDe_PAM</fullName>
        <columns>Lcm_Unit__c</columns>
        <columns>NAME</columns>
        <columns>Lcm_RequirementName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lcm_Unit__c</field>
            <operation>includes</operation>
            <value>PAM</value>
        </filters>
        <label>PAM</label>
        <language>de</language>
        <sharedTo>
            <group>Lcm_TestSphereSomDig</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SomDigDe_PM</fullName>
        <columns>Lcm_Unit__c</columns>
        <columns>NAME</columns>
        <columns>Lcm_RequirementName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lcm_Unit__c</field>
            <operation>includes</operation>
            <value>PM</value>
        </filters>
        <label>PM</label>
        <language>de</language>
        <sharedTo>
            <group>Lcm_TestSphereSomDig</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SomDigDe_Sales</fullName>
        <columns>Lcm_Unit__c</columns>
        <columns>NAME</columns>
        <columns>Lcm_RequirementName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lcm_Unit__c</field>
            <operation>includes</operation>
            <value>Sales</value>
        </filters>
        <label>Sales</label>
        <language>de</language>
        <sharedTo>
            <group>Lcm_TestSphereSomDig</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SomDigDe_Text</fullName>
        <columns>Lcm_Unit__c</columns>
        <columns>NAME</columns>
        <columns>Lcm_RequirementName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lcm_Unit__c</field>
            <operation>includes</operation>
            <value>Text</value>
        </filters>
        <label>Text</label>
        <language>de</language>
        <sharedTo>
            <group>Lcm_TestSphereSomDig</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SomDigDe_Yield</fullName>
        <columns>Lcm_Unit__c</columns>
        <columns>NAME</columns>
        <columns>Lcm_RequirementName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lcm_Unit__c</field>
            <operation>includes</operation>
            <value>Yield</value>
        </filters>
        <label>Yield</label>
        <language>de</language>
        <sharedTo>
            <group>Lcm_TestSphereSomDig</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>RQ-{0000}</displayFormat>
        <label>Requirement-Nr</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requirements</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>